# django_custom_jsonfield

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_test.txt  runtests.py  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
django_custom_jsonfield/: __init__.py  fields.py  forms.py  openapi.py  serializers.py
django_custom_jsonfield/rest_framework/: __init__.py  openapi.py  serializers.py
tests/: conftest.py  test_model_field.py  test_openapi_schema.py  test_serializer_field.py
